# AI-News

./: .gitignore  AGENTS.md  HEARTBEAT.md  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.clawhub/: lock.json
apps/api-gateway/: .env.example  Dockerfile  pyproject.toml
apps/api-gateway/src/: __init__.py  deps_health.py  event_contracts.py  main.py  settings.py
apps/evomap/: README.md  evomap-client.mjs
apps/frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
contracts/: execution-result.contract.md  trade-intent.contract.md
memory/: 2026-02-23-0355.md
obsidian-vault/: README.md
obsidian-vault/00-Inbox/: AI-News-Dashboard.md  Agent-Shared-Log.md  Agent-Topology-v1.md  任务编号总表-v1.md  目录导航.md
openspec/: 00-system-overview.md  01-news-collector-agent.md  02-market-data-collector-agent.md  03-strategy-design-agent.md  04-backtest-agent.md  05-cross-agent-data-contracts-v0.3.md  06-memory-openviking-v0.3.md  07-api-blueprint-v0.3.1.md  08-storage-ddl-and-redis-v0.3.2.md  09-workspace-bootstrap-v0.3.2.md  10-migrations-playbook-v0.3.3.md  11-bybit-field-mapping-v0.3.3.md  12-frontend-antd-apple-style-v0.3.4.md  13-docker-deployment-v0.3.4.md  14-compose-topology-v0.3.5.md  15-dockerfile-template-spec-v0.3.5.md  16-implementation-roadmap-v0.3.6.md  17-review-checklist-v0.3.6.md  18-enhancements-v0.3.7.md  19-closed-loop-papertrading-v0.3.8.md  20-event-topics-and-payloads-v0.3.9.md  21-telegram-dm-template-v0.3.9.md  22-task-breakdown-v0.3.9.md
scripts/: COMMAND_PREFIX.md
(+109 files in other folders)
